# Electronic_store

./: .env.sample  README.md  pyproject.toml  requirements.txt
electronic_store/: asgi.py  settings.py  urls.py  wsgi.py
store/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  urls.py  views.py
